# JistR

./: '  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  create_test_files.sh  dot.jist  hello.jist  setup.sh  simple.jist  windows_setup.ps1
.github/workflows/: rust.yml
jist/: .swp  Cargo.toml  hello.jist  simple.jist  speed.py
jist/src/: ast.rs  base_variables.rs  compiler.rs  function_map.rs  (+5 more)
src/: ast.rs  base_variable.rs  collection.rs  compiler.rs  function.rs  function_map.rs  globals.rs  highlighter.rs  lib.rs  main.rs  node.rs  old-tokenizer.rs  token_type.rs  tokenizer.rs
test_files/: arithmetic_operations.jist  array_boolean_collection_declaration.jist  array_char_collection_declaration.jist  array_float_collection_declaration.jist  array_int_collection_declaration.jist  boolean_variable_declaration.jist  char_variable_declaration.jist  complex_expressions.jist  create_test_files.sh  dict_boolean_string_collection_declaration.jist  dict_float_int_collection_declaration.jist  dict_int_char_collection_declaration.jist  dict_int_string_collection_declaration.jist  dict_string_float_collection_declaration.jist  file_read.jist  file_write.jist  float_variable_declartion.jist  for_loop.jist  function_declaration.jist  if_else_conditions.jist  int_variable_declaration.jist  logical_operations.jist  multi_line_comments.jist  nested_function_calls.jist  recursive_function.jist  single_line_comments.jist  string_variable_declaration.jist  test_variable_declarations.jist  type_mismatch.jist  variable_reassignment.jist  while_loop.jist
(+17 files in other folders)
