[package]
name = "jist"
version = "0.1.0"
edition = "2021"
description = "Welcome to Jist a lightweight and efficient programming language built in Rust, designed for simplicity, flexibility, and fast performance with a clean and readable syntax. Github: https://github.com/jon429r/JistR"
license = "MIT"

[[bin]]
name = "jist"
path = "src/main.rs"

[dependencies]
crossterm = "0.26"
rand = "0.8"
lazy_static = "1.4"
ansi_term = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "1.0"
